<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/groupProfileRoot" android:background="@color/abugelap" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:custom="http://schemas.android.com/apk/res/com.bbm">
    <TextView android:textColor="@color/biru" android:id="@id/group_settings_admin_password_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/group_settings_admin_password_text" />
    <TextView android:textColor="@color/biru" android:id="@id/password_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/group_settings_admin_password_label" android:layout_below="@id/group_settings_admin_password_text" />
    <EditText android:textSize="16.0sp" android:id="@id/password_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:hint="@string/group_settings_admin_password_hint" android:layout_below="@id/password_label" android:inputType="textPassword" style="@style/BB10Edit" />
    <TextView android:textColor="@color/biru" android:id="@id/password_confirm_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/group_settings_admin_confirm_label" android:layout_below="@id/password_field" />
    <EditText android:textSize="16.0sp" android:id="@id/password_confirm_field" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:hint="@string/group_settings_admin_confirm_hint" android:layout_below="@id/password_confirm_label" android:inputType="textPassword" style="@style/BB10Edit" />
</RelativeLayout>