<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:custom="http://schemas.android.com/apk/res/com.bbm">
    <ScrollView android:id="@id/settings_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/footer_action_bar" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:background="@drawable/selector_settings_item" android:paddingLeft="@dimen/settings_item_padding_left" android:paddingRight="@dimen/settings_item_padding_right" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:baselineAligned="false" android:onClick="onEditBlackberryIDClicked">
                <TextView android:textSize="@dimen/fontSizeXSmall" android:textColor="@color/settings_activity_blackberry_id_label_color" android:id="@id/edit_blackberry_id_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blackberry_id" android:layout_alignParentLeft="true" />
                <ImageButton android:id="@id/edit_blackberry_id_button" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/blank" style="@style/SettingsDrillDown" />
                <TextView android:ellipsize="marquee" android:id="@id/edit_blackberry_id_user_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_toLeftOf="@id/edit_blackberry_id_button" android:layout_below="@id/edit_blackberry_id_label" style="@style/Common.Label" />
            </RelativeLayout>
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_show_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_show_location" style="@style/Common.Switch" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_show_what_others_are_listening_to" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_show_what_others_are_listening_to" style="@style/Common.Switch" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_allow_contact_upload" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_allow_contact_upload" style="@style/Common.Switch" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <com.bbm.ui.ListHeaderView android:layout_width="fill_parent" android:layout_height="wrap_content" custom:leftLabel="@string/pref_notifications" custom:showRightLabel="false" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_sticky_notification" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_sticky_notification" style="@style/Common.Switch" />
            <TextView android:textSize="@dimen/fontSizeXSmall" android:id="@id/text_sticky_notification_warning" android:paddingLeft="@dimen/settings_item_padding_left" android:paddingRight="@dimen/settings_item_padding_right" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pref_sticky_notification_warning" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_notifications" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_all_notifications" style="@style/Common.Switch" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_vibrate_notifications" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_vibrate_notifications" style="@style/Common.Switch" />
            <Spinner android:id="@id/settings_basic_notifications_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_padding_left" android:layout_marginTop="@dimen/settings_item_padding_top" android:layout_marginRight="@dimen/settings_item_padding_right" android:layout_marginBottom="@dimen/settings_item_padding_bottom" style="@style/CascadesSpinner" />
            <Spinner android:id="@id/settings_led_notifications_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_padding_left" android:layout_marginTop="@dimen/settings_item_padding_top" android:layout_marginRight="@dimen/settings_item_padding_right" android:layout_marginBottom="@dimen/settings_item_padding_bottom" style="@style/CascadesSpinner" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <com.bbm.ui.ListHeaderView android:layout_width="fill_parent" android:layout_height="wrap_content" custom:leftLabel="@string/chats" custom:showRightLabel="false" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_auto_voice_record" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_activity_auto_voice_record" style="@style/Common.Switch" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_show_avatar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_activity_show_avatars" style="@style/Common.Switch" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_chat_history" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_activity_save_chat_history" style="@style/Common.Switch" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_show_action_bar_with_keyboard" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_activity_show_action_bar_with_keyboard" style="@style/Common.Switch" />
            <Button android:id="@id/settings_clear_chat_history_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_padding_left" android:layout_marginTop="@dimen/settings_item_padding_top" android:layout_marginRight="@dimen/settings_item_padding_right" android:layout_marginBottom="@dimen/settings_item_padding_bottom" android:text="@string/settings_activity_delete_chat_history" android:onClick="onDeleteChatHistoryClicked" style="@style/SettingsButton" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <com.bbm.ui.ListHeaderView android:layout_width="fill_parent" android:layout_height="wrap_content" custom:leftLabel="@string/contacts" custom:showRightLabel="false" />
            <Spinner android:id="@id/settings_contacts_layout_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_padding_left" android:layout_marginTop="@dimen/settings_item_padding_top" android:layout_marginRight="@dimen/settings_item_padding_right" android:layout_marginBottom="@dimen/settings_item_padding_bottom" style="@style/CascadesSpinner" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <org.jraf.android.backport.switchwidget.Switch android:id="@id/switch_security_question" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_security_question" style="@style/Common.Switch" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <RelativeLayout android:orientation="horizontal" android:background="@drawable/selector_settings_item" android:paddingLeft="@dimen/settings_item_padding_left" android:paddingRight="@dimen/settings_item_padding_right" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:baselineAligned="false" android:onClick="onEditBlockedContactsClicked">
                <TextView android:id="@id/edit_blocked_contacts_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/edit_blocked_contact" android:layout_toLeftOf="@id/edit_blocked_contacts_button" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/Common.Label" />
                <ImageButton android:id="@id/edit_blocked_contacts_button" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/blank" style="@style/SettingsDrillDown" />
            </RelativeLayout>
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:layout_marginBottom="@dimen/settings_item_small_padding_bottom" layout="@layout/divider_common" />
            <com.bbm.ui.ListHeaderView android:layout_width="fill_parent" android:layout_height="wrap_content" custom:leftLabel="@string/about" custom:showRightLabel="false" />
            <RelativeLayout android:paddingLeft="@dimen/settings_item_padding_left" android:paddingRight="@dimen/settings_item_padding_right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_item_small_padding_top" android:baselineAligned="false">
                <TextView android:id="@id/version_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version" android:layout_toLeftOf="@id/version" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/Common.Label" />
                <TextView android:id="@id/version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/Common.Label" />
            </RelativeLayout>
            <Button android:id="@id/view_legal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_padding_left" android:layout_marginTop="@dimen/settings_item_padding_top" android:layout_marginRight="@dimen/settings_item_padding_right" android:layout_marginBottom="@dimen/settings_item_padding_bottom" android:text="@string/settings_activity_legal" android:onClick="onLegalClicked" style="@style/SettingsButton" />
            <Button android:id="@id/settings_report_a_problem_button" android:layout_width="fill_parent" android:layout_marginLeft="@dimen/settings_item_padding_left" android:layout_marginRight="@dimen/settings_item_padding_right" android:text="@string/settings_activity_report_a_problem" style="@style/SettingsButton" />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/view_merge_footer_actionbar_dropshadow" />
</RelativeLayout>